fix: diagonal box does not overflow

--- a/index.css
+++ b/index.css
@@ -6,13 +6,15 @@
 
 body {
   width: 100%;
-  max-width: 400px;
-  overflow-x: hidden;
+  max-width: 100%;
+  position: relative;
 }
 
 header {
   width: 100%;
   height: auto;
+  position: relative;
+  overflow: hidden;
 }
 
 .heading-pic-container {
@@ -20,7 +22,6 @@ header {
   width: 100%;
   max-width: 100%;
   padding: 1.5rem;
-  overflow: hidden;
   position: relative;
 }
 
@@ -35,10 +36,13 @@ header {
 
 .diagonal-square-background {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vw;
   background-color: rgb(16, 91, 221);
-  transform: rotate(-5deg) translateY(-30%) scale(3);
+  transform-origin: bottom;
+  transform: rotate(-5deg) scale(3);
   z-index: 2;
 }
 
@@ -94,7 +98,7 @@ main {
 
 .project-container-div {
   margin-top: 3rem;
-  width: 300px;
+  width: 100%;
   height: auto;
   box-shadow: 0 2px 2px 0;
 }
@@ -131,8 +135,8 @@ main {
 
 .img-container {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 250px;
 }
 
 .project-screenshot {
